force-app/main/default/objects/hed__Error__c/fields/hed__Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>hed__Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether an email notification has been sent regarding this error.</description>
    <inlineHelpText>Indique si une notification par e-mail concernant cette erreur a été envoyée.</inlineHelpText>
    <label>Email Sent</label>
    <type>Checkbox</type>
</CustomField>