force-app/main/default/objects/hed__Error__c/fields/hed__Error_Type__c.field-meta.xml
<CustomField>
    <fullName>hed__Error_Type__c</fullName>
    <description>Type of error that occurred.</description>
    <inlineHelpText>Type de l’erreur rencontrée.</inlineHelpText>
    <label>Error Type</label>
    <type>TextArea</type>
</CustomField>