force-app/main/default/objects/hed__Error__c/fields/hed__Object_Type__c.field-meta.xml
<CustomField>
    <fullName>hed__Object_Type__c</fullName>
    <description>The object on which the error occurred, if known.</description>
    <inlineHelpText>L’objet sur lequel l’erreur s’est produite, si connu.</inlineHelpText>
    <label>Object Type</label>
    <type>TextArea</type>
</CustomField>