force-app/main/default/objects/hed__Error__c/fields/hed__Record_URL__c.field-meta.xml
<CustomField>
    <fullName>hed__Record_URL__c</fullName>
    <description>A link to the record which caused the error, if available.</description>
    <inlineHelpText>S&apos;il est disponible, lien vers l’enregistrement qui a entraîné l’erreur.</inlineHelpText>
    <label>Record URL</label>
    <type>Url</type>
</CustomField>