force-app/main/default/objects/hed__Error__c/fields/hed__Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>hed__Stack_Trace__c</fullName>
    <description>Stack trace for the thrown error, if available at runtime.</description>
    <inlineHelpText>Trace de la pile de l’erreur déclenchée, si elle disponible à l&apos;exécution.</inlineHelpText>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>